[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/BossLevel/BossGreenSection.png" type="Texture" id=1]
[ext_resource path="res://src/Levels/BossLevel/BossGreenSection.gd" type="Script" id=2]
[ext_resource path="res://src/Misc/GenericExplosion.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.466667, 0, 0, 1 )

[node name="BossGreenSection" type="Node2D"]
script = ExtResource( 2 )

[node name="BossGreenSection" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 0.318886, -60.058, 35.9501, -35.7532, 35.9501, 44.0042, 0.0829163, 69.0169, -36.2562, 43.7682, -35.5483, -36.6971 )

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
margin_left = -49.1924
margin_top = -91.2373
margin_right = 49.8076
margin_bottom = -70.2373
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenericExplosion" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="GenericExplosion" to="." method="_on_GenericExplosion_animation_finished"]
